# NordjyllandNews

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: docs.yaml
config/: config.yaml
notebooks/: image_caption_post_process.ipynb  process_image_data.ipynb  process_summary_data.ipynb
src/nordjylland_news/: __init__.py  base_dataset_class.py  constants.py  exceptions.py  image_caption_data_set.py  image_caption_dataset.py  summary_data_set.py  summary_dataset.py  utils.py
src/scripts/: build_image_caption_dataset.py  build_summarization_dataset.py  constants.py  main.py  summary_data_set.py  upload_image_captioning.py  upload_summary.py
tests/: conftest.py  test_dummy.py  test_image_caption.py  test_summary.py
